# scala_di_benchmarks

./: .gitignore  README.md  build.sbt  generator.py  profiler.py  pyproject.toml
src/custom/scala/: Main.scala
src/custommacro/scala/: Macro.scala
src/implicit/scala/: Main.scala
src/jam/scala/: Main.scala
src/macwire/scala/: Main.scala
src/manual/scala/: Main.scala
